--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -8,9 +8,9 @@
 	<script type="text/javascript" src="threeJS/build/three.js"></script>
 	<script type="text/javascript" src="threeJS/js/controls/TrackballControls.js">//Estado</script>
 	<script type="text/javascript" src="threeJS/js/Detector.js">//detector si el navegador soporta WebGL</script>	
-	<script type="text/javascript" src="Cesium.js"> 	//Cesium		</script>
-	<script type="text/javascript" src="cesiumjs.js">	//Libreria mía.	</script> 
-	<script type="text/javascript" src="threejs.js">	//Libreria mía.	</script>
+	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
+	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script> 
+	<script type="text/javascript" src="js/threejs.js">	//Libreria mía.	</script>
 	<title> CesiumJS </title>
 
 </head>
