--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -11,12 +11,20 @@
 	<script type="text/javascript" src="js/threejs.js">	//Libreria mía.	</script>
 	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
 	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script> 
+	
+	<!-- mapBox -->
+	<link href='https://mapbox.com/base/latest/base.css?v1.0' rel='stylesheet' />
+	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.3/mapbox.js'></script>
+	
 	<title> CesiumJS </title>
 
 </head>
 
 
 <body onload="load()">
+	<div> 
+		<input type='button' id="tile" class='button' value='Create Map' onclick='createMap()' /> 
+	</div>
 	<div id="container"><!--Aquí ira el renderizado.--></div>
 </body>
 
