--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -10,7 +10,8 @@
 	<script type="text/javascript" src="threeJS/js/Detector.js">//detector si el navegador soporta WebGL</script>	
 	<script type="text/javascript" src="js/threejs.js">	//Libreria mía.	</script>
 	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
-	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script> 
+	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script>
+	<script type="text/javascript" src="js/fusion.js">	//Libreria mía.	</script> 
 	
 	<!-- mapBox -->
 	<link href='https://mapbox.com/base/latest/base.css?v1.0' rel='stylesheet' />
