--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -26,6 +26,7 @@
 	<div> 
 		<input type='button' id="tile" class='button' value='Create Map' onclick='createMap()' /> 
 		<input type='button' id="merge" class='button' value='Merge' onclick='merge()' />
+		<input type='button' id="box" class='button' value='Add Box with texture' onclick='addBox()' />
 	</div>
 	<div id="container"><!--Aquí ira el renderizado.--></div>
 </body>
