--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -24,7 +24,7 @@
 
 <body onload="load()">
 	<div> 
-		<input type='button' id="tiles" class='button' value='Create Map' onclick='createMap()' /> 
+		<input type='button' id="mesh" class='button' value='Create Mesh' onclick='createMesh()' /> 
 		<input type='button' id="merge" class='button' value='Merge' onclick='merge()' />
 		<!-- <input type='button' id="box" class='button' value='Add Box with texture' onclick='addBox()' />
 		<input type='button' id="geometry" class='button' value='Add Geometry with texture' onclick='addGeometry()' /> -->
