--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -6,16 +6,17 @@
 	<script type="text/javascript" src="threeJS/js/libs/stats.min.js">//Estado</script> 
 	<script type="text/javascript" src="threeJS/js/libs/dat.gui.min.js">//GUI Graphic user interface </script> 
 	<script type="text/javascript" src="threeJS/build/three.js"></script>
-	<script type="text/javascript" src="threeJS/js/controls/TrackballControls.js">//Estado</script>
+	<script type="text/javascript" src="threeJS/js/controls/TrackballControls.js">//Eliminado</script>
+	<script type="text/javascript" src="threeJS/js/controls/OrbitControls.js">//Nuevo añadido</script>
 	<script type="text/javascript" src="threeJS/js/Detector.js">//detector si el navegador soporta WebGL</script>	
 	<script type="text/javascript" src="js/threejs.js">	//Libreria mía.	</script>
 	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
 	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script>
-	<!-- <script type="text/javascript" src="js/fusion.js">	//Libreria mía.	</script> -->
+	<script type="text/javascript" src="js/gui.js">	//Libreria mía.	</script> 
 	
 	<!-- mapBox -->
-	<link href='https://mapbox.com/base/latest/base.css?v1.0' rel='stylesheet' />
-	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.3/mapbox.js'></script>
+	<!-- <link href='https://mapbox.com/base/latest/base.css?v1.0' rel='stylesheet' />
+	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.3/mapbox.js'></script> -->
 	
 	<title> CesiumJS </title>
 
@@ -23,13 +24,13 @@
 
 
 <body onload="load()">
-	<div> 
-		<input type='button' id="mesh" class='button' value='Create Mesh' onclick='createMesh()' /> 
-		<input type='button' id="merge" class='button' value='Merge' onclick='merge()' />
+	<!--<div> -->
+		<!--<input type='button' id="mesh" class='button' value='Create Mesh' onclick='createMesh()' /> 
+		<input type='button' id="merge" class='button' value='Merge 4 mesh (1 texture)' onclick='merge()' /> -->
 		<!-- <input type='button' id="box" class='button' value='Add Box with texture' onclick='addBox()' />
 		<input type='button' id="geometry" class='button' value='Add Geometry with texture' onclick='addGeometry()' /> -->
-	</div>
-	<div id="container"><!--Aquí ira el renderizado.--></div>
+	<!-- </div> -->
+	<!-- <div id="container"></div>-->
 </body>
 
 </html>
