--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -9,9 +9,11 @@
 	<script type="text/javascript" src="threeJS/js/controls/TrackballControls.js">//Eliminado</script>
 	<script type="text/javascript" src="threeJS/js/controls/OrbitControls.js">//Nuevo añadido</script>
 	<script type="text/javascript" src="threeJS/js/Detector.js">//detector si el navegador soporta WebGL</script>	
+	
 	<script type="text/javascript" src="js/threejs.js">	//Libreria mía.	</script>
 	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
-	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script>
+	<script type="text/javascript" src="js/cesiumjs.js">	//Libreria mía.	</script> 
+	<!-- <script type="text/javascript" src="js/cesiumjsgui.js">	//Libreria mía.	</script> -->
 	<script type="text/javascript" src="js/gui.js">	//Libreria mía.	</script> 
 	
 	<!-- mapBox -->
