--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -5,6 +5,7 @@
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
+	<link href='https://mapbox.com/base/latest/base.css?v1.0' rel='stylesheet' />
 	<!-- JavaScript: Mi libreria.-->
 	<script type="text/javascript" src="js/rute.js"> </script>
 	<!-- JavaScript: Para codificar las coordenadas -->
@@ -13,14 +14,19 @@
 	<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 	<style>
 		body { margin:0; padding:0; }
-		#map { position:absolute; top:0; bottom:0; width:30%; height:85%}
+		#map { position:absolute; top:0; margin-left:35%; width:30%; height:85%}
+		#buttons {position:absolute; bottom:0;}
 	</style>
 	<title> PFC Three.js  </title>
 
 </head>
 
 <body onload="getRute()">
-	<div id='map'></div>
+	<div id="map"></div>
+	<div id="buttons"> 
+		<input type='button' class='button' value='Cambiar Mapa' name='' onclick="changeMap()" /> 
+		<input type='button' class='button' value='Dibujar Mapa' name='' onclick="drawRute()" /> 
+	</div>
 </body>
 
 </html>
