--- a/PFCCesium.html
+++ b/PFCCesium.html
@@ -25,7 +25,7 @@
 </head>
 
 
-<body onload="load()">
+<body onload="loadThreeJS()">
 	<!--<div> -->
 		<!--<input type='button' id="mesh" class='button' value='Create Mesh' onclick='createMesh()' /> 
 		<input type='button' id="merge" class='button' value='Merge 4 mesh (1 texture)' onclick='merge()' /> -->
