--- a/PFCIndex.html
+++ b/PFCIndex.html
@@ -11,21 +11,25 @@
 		<fieldset>
 			<legend>Subir ruta gpx <i>drag and drop</i></legend>
 			<input type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="300000" />
+			<div id="filedrag">Arrastrar aquí</div>
 			<div>
 				<!-- 
 				<label for="fileselect">Fichero a subir</label>
 				<input type="file" id="fileselect" name="fileselect[]" multiple="multiple" />
 				-->
-				<div id="filedrag">Arrastrar aquí</div>
+				
 			</div>
+			<!--
 			<div id="submitbutton">
 				<button type="submit">Subir ficheros</button>
 			</div>
+			-->
 		</fieldset>
 	</form>
 
-	<div id="messages">
+	<!-- <div id="messages">
 		<p><i>Mensaje de estado</i></p>
 	</div>
+	-->
 </body>
 </html>
