--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -17,8 +17,9 @@
 	<script type="text/javascript" src="js/my_cesium_rute.js"> 	//My library.	</script>
 	<style>
 		body { margin:0; padding:0; }
-		#map { position:absolute; margin-top:3%; margin-left:35%; width:30%; height:73%}
-		#buttons {position:absolute; margin-top:3%; margin-left:45%; width:30%; }
+		<!-- #map { position:absolute; margin-top:3%; margin-left:35%; width:30%; height:73%} -->
+		#map { position:absolute; margin-top:3%; margin-left:25%; width:50%;}
+		#buttons {position:absolute; margin-top:3%; margin-left:45%; width:30%;}
 		#file {position:relative; float:right;}
 	</style>
 	<title> PFC Three.js  </title>
