--- a/PFCMyMesh.html
+++ b/PFCMyMesh.html
@@ -2,8 +2,12 @@
 <head>
 	<!-- JavaScript: CesiumJS and myCesium -->
 	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
-	<script type="text/javascript" src="js/create_mesh.js">	//Libreria mía.	</script>
-	<script type="text/javascript" src="js/my_cesium_mesh.js">	//Libreria mía.	</script>
+	<script type="text/javascript" src="js/my_cesium_mesh.js">	//My library.	</script>
+	<script type="text/javascript" src="js/create_mesh.js">	//My library.	</script>
+	<script type="text/javascript" src="js/functions.js"> 	//My library.	</script>
+	<script type="text/javascript" src="js/classes.js"> 	//My library.	</script>
+	
+	
 	<!-- JavaScript: Three.js -->
 	<script type="text/javascript" src="threeJS/js/Detector.js">				//Detector web support WebGL 	</script>
 	<script type="text/javascript" src="threeJS/js/libs/stats.min.js">			//Stats							</script>
