--- a/PFCMyMesh.html
+++ b/PFCMyMesh.html
@@ -1,13 +1,6 @@
 <html  xml:lang="es" lang="es">
 <head>
-	<!-- JavaScript: CesiumJS and myCesium -->
-	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
-	<script type="text/javascript" src="js/my_cesium_mesh.js">	//My library.	</script>
-	<script type="text/javascript" src="js/functions.js"> 	//My library.	</script>
-	<script type="text/javascript" src="js/classes.js"> 	//My library.	</script>
-	
-	
-	<!-- JavaScript: Three.js -->
+		<!-- JavaScript: Three.js -->
 	<script type="text/javascript" src="threeJS/js/Detector.js">				//Detector web support WebGL 	</script>
 	<script type="text/javascript" src="threeJS/js/libs/stats.min.js">			//Stats							</script>
 	<script type="text/javascript" src="threeJS/build/three.js"> 				//ThreeJS 						</script>
@@ -15,6 +8,15 @@
 	<script type="text/javascript" src="threeJS/js/libs/dat.gui.min.js">		//GUI Graphic user interface 	</script>
 	<script type="text/javascript" src="js/threejs.js">							//My library.					</script>	
 	<script type="text/javascript" src="js/gui.js">								//My library.					</script>
+
+	<!-- JavaScript: CesiumJS and myCesium -->
+	<script type="text/javascript" src="js/Cesium.js"> 	//Cesium		</script>
+	<script type="text/javascript" src="js/my_cesium_mesh.js">	//My library.	</script>
+	<script type="text/javascript" src="js/functions.js"> 	//My library.	</script>
+	<script type="text/javascript" src="js/classes.js"> 	//My library.	</script>
+	
+	<script type="text/javascript" src="js/x3dExporter.js"> 	//My library.	</script>
+
 	<title> PFC Three.js  </title>
 </head>
 
