--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -7,7 +7,8 @@
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
 	<link href='https://mapbox.com/base/latest/base.css?v1.0' rel='stylesheet' />
 	<!-- JavaScript: Para codificar las coordenadas -->
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=geometry"></script> -->
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true"></script>
 	<!-- JavaScript: include method omnivore para gpx, kml-->
 	<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 	<!-- JavaScript: CesiumJS and myCesium -->
