--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -15,6 +15,8 @@
 	<script type="text/javascript" src="js/Cesium.js"> 		//Cesium		</script>
 	<!-- <script type="text/javascript" src="js/my_cesium.js">	//My library.	</script> -->
 	<!-- JavaScript: Mi libreria.-->
+	<script type="text/javascript" src="js/functions.js"> 	//My library.	</script>
+	<script type="text/javascript" src="js/classes.js"> 	//My library.	</script>
 	<script type="text/javascript" src="js/my_cesium_rute.js"> 	//My library.	</script>
 	<style>
 		body { margin:0; padding:0; }
