--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -21,8 +21,8 @@
 	<style>
 		body { margin:0; padding:0; }
 		<!-- #map { position:absolute; margin-top:3%; margin-left:35%; width:30%; height:73%} -->
-		#map { position:absolute; margin-top:3%; margin-left:35%; width:30%;}
-		#buttons {position:absolute; margin-top:3%; margin-left:45%; width:30%;}
+		#map { position:absolute; margin-top:3%; margin-left:35%; width:30%; height:70%}
+		#buttons {position:absolute; margin-top:3%; margin-left:15%; width:30%;}
 		#file {position:relative; float:right;}
 	</style>
 	<title> PFC Three.js  </title>
