--- a/PFCIndex.html
+++ b/PFCIndex.html
@@ -27,6 +27,7 @@
 		</fieldset>
 	</form>
 
+	<div id="delete" > <a href="javascript:deleteFiles()"> borrar información almacenada </a> </div>
 	<!-- <div id="messages">
 		<p><i>Mensaje de estado</i></p>
 	</div>
