--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -22,7 +22,7 @@
 		body { margin:0; padding:0; }
 		<!-- #map { position:absolute; margin-top:3%; margin-left:35%; width:30%; height:73%} -->
 		#map { position:absolute; margin-top:3%; margin-left:35%; width:30%; height:70%}
-		#buttons {position:absolute; margin-top:3%; margin-left:15%; width:30%;}
+		#buttons {position:absolute; margin-top:3%; margin-left:5%; width:30%;}
 		#file {position:relative; float:right;}
 	</style>
 	<title> PFC Three.js  </title>
@@ -37,6 +37,7 @@
 			 <input type='button' class='button' value='Dibujar Mapa' onclick="drawRute()" /> -->
 		<a class='icon layers button' onclick="changeMap()">Cambiar Mapa</a>
 		<a class='icon pencil button' onclick="drawRute()">Modelar 3D</a>
+		<a class='icon pencil button' onclick="drawAdvanced()">Modelar 3D Avanzado</a>
 	</div>
 </body>
 
