--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -36,7 +36,7 @@
 		<!-- <input type='button' class='button' value='Cambiar Mapa' onclick="changeMap()" /> 
 			 <input type='button' class='button' value='Dibujar Mapa' onclick="drawRute()" /> -->
 		<a class='icon layers button' onclick="changeMap()">Cambiar Mapa</a>
-		<a class='icon pencil button' onclick="drawRute()">Modelar 3D</a>
+		<a class='icon pencil button' onclick="showTiles()">Mostrar Tiles</a> 
 		<a class='icon pencil button' onclick="drawAdvanced()">Modelar 3D Avanzado</a>
 	</div>
 </body>
