--- a/PFCMyMesh.html
+++ b/PFCMyMesh.html
@@ -16,12 +16,21 @@
 	<script type="text/javascript" src="js/classes.js"> 	//My library.	</script>
 	
 	<script type="text/javascript" src="js/x3dExporter.js"> 	//My library.	</script>
+	
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/my_jquery.js"> 	//My library.	</script>
 
 	<title> PFC Three.js  </title>
 </head>
 
 <body onload="requestTilesWhenReady()">
-
+	<div id="dialog-cesium" style="width=50%" title="Error cesium">
+		<!-- <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span> -->
+		Actualizar navegador. 
+	  <!-- <p> Currently using <b>36% of your storage space</b>. </p> -->
+	</div>
 </body>
 
 </html>
