--- a/PFCMyMesh.html
+++ b/PFCMyMesh.html
@@ -31,6 +31,12 @@
 		Actualizar navegador. 
 	  <!-- <p> Currently using <b>36% of your storage space</b>. </p> -->
 	</div>
+	<div id="dialog-geometry" style="width=50%" title="Creando Modelo 3D">
+		<!-- <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span> -->
+		Creando modelo. <br><br>
+		<div id="progressbar"></div>
+	  <!-- <p> Currently using <b>36% of your storage space</b>. </p> -->
+	</div>
 </body>
 
 </html>
