--- a/PFCMyMesh.html
+++ b/PFCMyMesh.html
@@ -26,7 +26,7 @@
 </head>
 
 <body onload="requestTilesWhenReady()">
-	<div id="dialog-cesium" style="width=50%" title="Error cesium">
+	<div id="dialog-cesium" style="width=50%" title="Error cesium datos">
 		<!-- <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span> -->
 		Actualizar navegador. 
 	  <!-- <p> Currently using <b>36% of your storage space</b>. </p> -->
