--- a/PFCMapbox.html
+++ b/PFCMapbox.html
@@ -1,7 +1,7 @@
 <html  xml:lang="es" lang="es">
 <html>
 <head>
-	<!-- <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' /> -->
+	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
 	<style>
@@ -15,7 +15,13 @@
 	<div id='map'></div>
 	<script>
 		L.mapbox.accessToken = 'pk.eyJ1IjoiZ29uemFsaXRvIiwiYSI6IlVJTGIweFUifQ.waoF7m8PZbBM6u8Tg_rR7A';
-		var map = L.mapbox.map('map', 'examples.map-i86nkdio').setView([40, -74.50], 9);
+		var map = L.mapbox.map('map', 'gonzalito.lg2cgg21').setView([42.8, -1.634], 17);
 	</script>
 </body>
 </html>
+
+
+
+
+
+
