--- a/PFCMapbox.html
+++ b/PFCMapbox.html
@@ -9,7 +9,7 @@
 	  #map { position:absolute; top:0; bottom:0; width:100%; }
 	</style>
 	
-	<title>Mapa Simple</title>
+	<title>PFC Mapbox</title>
 </head>
 <body>
 	<div id='map'></div>
