--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -44,8 +44,9 @@
 		<!-- <input type='button' class='button' value='Cambiar Mapa' onclick="changeMap()" /> 
 			 <input type='button' class='button' value='Dibujar Mapa' onclick="drawRute()" /> -->
 		<a class='icon layers button' onclick="changeMap()">Cambiar Mapa</a>
-		<a class='icon pencil button' onclick="showTiles()">Mostrar Tiles</a> 
+		<a class='icon pencil button' onclick="showTiles(3)">Mostrar Tiles</a> 
 		<a class='icon pencil button' onclick="drawAdvanced()">Modelar 3D Avanzado</a>
+		<a class='icon pencil button' onclick="drawRute()">Dibujar ruta</a>
 	</div>
 	
 	<div id="dialog-message" style="width=50%" title="Subida de ficheros">
