--- a/PFCMyRute.html
+++ b/PFCMyRute.html
@@ -41,7 +41,7 @@
 <body onload="requestTilesWhenReady()">
 	<div id="buttons2"> 
 	<a class='icon layers button' onclick="changeMap()">Cambiar Mapa</a>
-		<a class='icon pencil button' onclick="drawRute()">Dibujar ruta</a>	
+		<a class='icon pencil button' onclick="drawRute()">Modelar Ruta</a>	
 		<a class='icon pencil button' onclick="showTiles()">Mostrar Tiles</a>
 		<a class='icon pencil button' onclick="showRectangle()">Mostrar Rectangulo</a> 
 	</div>
